[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/enemy_images_models/kenney_space-shooter-extension/PNG/Sprites/Ships/spaceShips_002.png" type="Texture" id=1]
[ext_resource path="res://enemylevel2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.5, 42.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.333333, 0.101961, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "enemy_flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.333333, 0.101961, 1 ), Color( 0.980392, 0.937255, 0.917647, 1 ) ]
}

[node name="enemylevel2" type="Area2D"]
position = Vector2( 374, 137 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.909804, 0.333333, 0.101961, 1 )
position = Vector2( 2, -66.5 )
scale = Vector2( 1.22772, 1.17568 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -68 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
modulate = Color( 0.823529, 0.172549, 0.172549, 1 )
self_modulate = Color( 0.85098, 0.203922, 0.203922, 1 )
show_behind_parent = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/enemy_flicker = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_enemy1_area_entered"]
[connection signal="healthzero" from="." to="." method="_on_enemylevel2_healthzero"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
